--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@ Hot4/.vs/Hot4/FileContentIndex/bb088d4c-d595-4bed-bedb-1fc578607168.vsidx
 Hot4/.vs/Hot4/FileContentIndex/ed9c8f46-fd85-4bc1-ba79-8fe0b67529f6.vsidx
 Hot4/Hot4.Repository/obj/Debug/net8.0/Hot4.Repository.csproj.CoreCompileInputs.cache
 Hot4/Hot4.Repository/obj/Debug/net8.0/Hot4.Repository.csproj.AssemblyReference.cache
+Hot4/.vs/Hot4/config/applicationhost.config
+Hot4/.vs/Hot4/FileContentIndex/8f5fba66-2860-4ece-8788-9fe325547ef9.vsidx
+Hot4/.vs/Hot4/FileContentIndex/b38227fb-d227-40e0-93e4-82592f1a2bb0.vsidx
+Hot4/.vs/Hot4/v17/DocumentLayout.backup.json
