change in access add/update and delete

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
-/Hot4/Hot4.Core/obj
-/Hot4/Hot4.Core/bin
-/Hot4/Hot4.Server/bin
-/Hot4/Hot4.Server/obj
-/Hot4/Hot4.DataModel/bin
-/Hot4/Hot4.DataModel/obj
-/Hot4/Hot4.Repository/bin
-/Hot4/Hot4.Repository/obj
-/Hot4/Hot4.Service/bin
-/Hot4/Hot4.Service/obj
-/Hot4/Hot4.ViewModel/obj
-/Hot4/Hot4.ViewModel/bin
+Hot4/Hot4.Core/obj
+Hot4/Hot4.Core/bin
+Hot4/Hot4.Server/bin
+Hot4/Hot4.Server/obj
+Hot4/Hot4.DataModel/bin
+Hot4/Hot4.DataModel/obj
+Hot4/Hot4.Repository/bin
+Hot4/Hot4.Repository/obj
+Hot4/Hot4.Service/bin
+Hot4/Hot4.Service/obj
+Hot4/Hot4.ViewModel/obj
+Hot4/Hot4.ViewModel/bin
 Hot4/.vs
 /Hot4/.vs
 Hot4/.vs/Hot4/FileContentIndex/4a64b82e-2deb-4ce7-aa64-413e607fbab7.vsidx
@@ -25,3 +25,4 @@ Hot4/.vs/Hot4/FileContentIndex/b38227fb-d227-40e0-93e4-82592f1a2bb0.vsidx
 Hot4/.vs/Hot4/v17/DocumentLayout.backup.json
 Hot4/.vs/Hot4/FileContentIndex/ac22b560-496e-4f62-8617-6f6b1f902914.vsidx
 Hot4/.vs/Hot4/FileContentIndex/d9b950ca-daa9-4ac9-9ab9-3f323888c89f.vsidx
+Hot4/Hot4.DataModel/obj/Debug/net8.0/Hot4.DataModel.dll
