--- a/.gitignore
+++ b/.gitignore
@@ -10,25 +10,27 @@ Hot4/Hot4.Service/bin
 Hot4/Hot4.Service/obj
 Hot4/Hot4.ViewModel/obj
 Hot4/Hot4.ViewModel/bin
+Hot4/.vs
 /Hot4/Hot4.Core/obj
-/Hot4/Hot4.DataModel/obj
-/Hot4/Hot4.Repository/obj
+/Hot4/Hot4.Core/bin
+/Hot4/Hot4.Server/bin
 /Hot4/Hot4.Server/obj
+/Hot4/Hot4.DataModel/bin
+/Hot4/Hot4.DataModel/obj
+/Hot4/Hot4.Repository/bin
+/Hot4/Hot4.Repository/obj
+/Hot4/Hot4.Service/bin
 /Hot4/Hot4.Service/obj
 /Hot4/Hot4.ViewModel/obj
-Hot4/.vs
+/Hot4/Hot4.ViewModel/bin
 /Hot4/.vs
-Hot4/.vs/Hot4/FileContentIndex/4a64b82e-2deb-4ce7-aa64-413e607fbab7.vsidx
-Hot4/.vs/Hot4/FileContentIndex/98854507-c46b-4852-8c5f-bd2e11454b3b.vsidx
-Hot4/.vs/Hot4/FileContentIndex/b3ef7680-35e6-404e-b6a6-fdedaf876bb9.vsidx
-Hot4/.vs/Hot4/FileContentIndex/bb088d4c-d595-4bed-bedb-1fc578607168.vsidx
-Hot4/.vs/Hot4/FileContentIndex/ed9c8f46-fd85-4bc1-ba79-8fe0b67529f6.vsidx
 Hot4/Hot4.Repository/obj/Debug/net8.0/Hot4.Repository.csproj.CoreCompileInputs.cache
 Hot4/Hot4.Repository/obj/Debug/net8.0/Hot4.Repository.csproj.AssemblyReference.cache
 Hot4/.vs/Hot4/config/applicationhost.config
-Hot4/.vs/Hot4/FileContentIndex/8f5fba66-2860-4ece-8788-9fe325547ef9.vsidx
-Hot4/.vs/Hot4/FileContentIndex/b38227fb-d227-40e0-93e4-82592f1a2bb0.vsidx
 Hot4/.vs/Hot4/v17/DocumentLayout.backup.json
-Hot4/.vs/Hot4/FileContentIndex/ac22b560-496e-4f62-8617-6f6b1f902914.vsidx
-Hot4/.vs/Hot4/FileContentIndex/d9b950ca-daa9-4ac9-9ab9-3f323888c89f.vsidx
 Hot4/Hot4.DataModel/obj/Debug/net8.0/Hot4.DataModel.dll
+/Hot4/Hot4.Repository/obj/Debug/net8.0/Hot4.Repository.csproj.CoreCompileInputs.cache
+/Hot4/Hot4.Repository/obj/Debug/net8.0/Hot4.Repository.csproj.AssemblyReference.cache
+/Hot4/.vs/Hot4/config/applicationhost.config
+/Hot4/.vs/Hot4/v17/DocumentLayout.backup.json
+/Hot4/Hot4.DataModel/obj/Debug/net8.0/Hot4.DataModel.dll
