buss login add in sms service

--- a/Hot4/Hot4.Server/appsettings.json
+++ b/Hot4/Hot4.Server/appsettings.json
@@ -16,7 +16,9 @@
     "PinRechargePromoAccessError": "This Access Code may not sell this Pin Brand",
     "PinRechargePromoLowFund": "Your pin purchase failed due to insufficient balance. Your balance is US$ accountBalance. You can sell approximately US$ accountSellValue",
     "PinRechargePromoStock": "We have received your Bulk EVD request but do not have correct stock to process it. Stock quantity unavailable (stockAvailable in stock)",
-    "PinRechargePromoSuccess": "We have fulfilled a Promo Pin Purchase of $pinRechargePromoFinalAmt for <br/> Quantity: pinRechargePromoQty EVD Pins <br/> Pin Denomination: pinRechargePromoPinValue <br/> Brand: pinRechargePromoBrandName"
+    "PinRechargePromoSuccess": "We have fulfilled a Promo Pin Purchase of $pinRechargePromoFinalAmt for <br/> Quantity: pinRechargePromoQty EVD Pins <br/> Pin Denomination: pinRechargePromoPinValue <br/> Brand: pinRechargePromoBrandName",
+    "RechargeNotificationSubject": "HOT Recharge Notification",
+    "RechargeNotificationBody": "Dear accountName<br><br>messageText<br><br>Best regards <br>the HOT Recharge Team"
   },
   "EmailSettings": {
     "EmailId": "",
