worked in zesa and tel one service and testing in services
worked in zesa and tel one service and testing in services

--- a/Hot4/Hot4.Server/appsettings.json
+++ b/Hot4/Hot4.Server/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "HotdbConn": "Server=DESKTOP-I609GQP\\SQLEXPRESS;Database=HOT4;Trusted_Connection=True;TrustServerCertificate=true; Integrated Security=True"
+    "HotdbConn": "Server=DESKTOP-KBPCH3C;Database=HOT4;Trusted_Connection=True;TrustServerCertificate=true; Integrated Security=True"
   },
   "TemplateSettings": {
     "AnniversaryTemplate": "Anniversary",
@@ -38,5 +38,17 @@
     "StockTradeInvalidAmountResponse": "Invalid Amount",
     "StockTradeInvalidPaymentResponse": "Payment required excessed the Tradable ZWL Balance",
     "PinRedeemedPromoBatchId": 10008465
+  },
+  "Network_Setting": {
+    "Zesa":
+    {
+      "HotAPIKey": "Hot263180",
+      "TimeoutPeriod": 180000
+    },
+    "Telone":
+    {
+      "HotAPIKey": "Hot263180",
+      "TimeoutPeriod": 180000
+    }
   }
 }
