--- a/Hot4/Hot4.Core/Hot4.Core.csproj
+++ b/Hot4/Hot4.Core/Hot4.Core.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.5.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Hot4.ViewModel\Hot4.ViewModel.csproj" />
+  </ItemGroup>
+
 </Project>
