--- a/Admin/Hot-BulkRecharge/Hot.BulkRecharge/Hot.BulkRecharge.csproj
+++ b/Admin/Hot-BulkRecharge/Hot.BulkRecharge/Hot.BulkRecharge.csproj
@@ -10,15 +10,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
+    <PackageReference Include="OneOf" Version="3.0.271" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Hot-API-Client\Hot.API.Client\Hot.API.Client.csproj" />
+	  <ProjectReference Include="D:\Project\HOT4-latest\HOT4\NetworkProviders\Hot-API-Client\Hot.API.Client\Hot.API.Client.csproj" />
   </ItemGroup>
 
   <ItemGroup>
